# claude-backups

./: .claude-code  .env  .env.docker  .env.template  .git-commit-message.txt  .gitignore  .npmrc  100_PERCENT_COMPLETION_CERTIFICATE.md  AGENT_VISIBILITY_FIX.md  ALL_MODULES_COMPLETE.md  AUTO_UPDATE_SYSTEM_COMPLETE.md  BASH_OUTPUT_FIX_SUMMARY.md  CHECKPOINT_NEURAL_READY.md  CLAUDE.md  CLAUDE_UNIFIED_SETUP.md  CLAUDE_VENV_INSTALLER_SOLUTION.md  CLEAN_ROOT_DIRECTORY.sh  COMPLETE_SETUP_DOCUMENTATION.md  COORDINATION_EXECUTION_REPORT.md  CRYPTO_POW_FEEDBACK_MECHANISMS.md  DATABASE_AGENT_DELIVERABLE_SUMMARY.md  DEBUG_REPORT.md  DEBUG_SUMMARY.md  DELL_ENTERPRISE_DEPLOYMENT_PLAN.md  DEPLOYMENT_REPORT_v3.1.md  DIRECTORY-STRUCTURE.md  DIRECTORY_STRUCTURE.md  DOCKER_FIX_SUMMARY.md  ENHANCED_INSTALLER_COMPLETE_FEATURES.md  ENHANCED_WRAPPER_FIX_SUMMARY.md  ENHANCEMENT_AND_CODEX_PLAN.md  ENVIRONMENT_DETECTION_GUIDE.md  FINAL_CLEANUP.sh  FINAL_MODULE_STATUS.md  HARDCODED_PATHS_FIX_REPORT.md  HARDCODED_PATHS_SUMMARY.txt  HEADLESS_INSTALL_GUIDE.md  HOOKS_INTEGRATION_ANALYSIS.md  HTML-ORGANIZATION-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  (+247 more)
.aicontext/: project.yaml
.claude/: .claude.json  .credentials.json  agent-registry.json  available-agents.txt  defaults.json  installers  settings.json  settings.local.json  wrapper-integration.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
ADVERSARIAL_SIMULATIONS/: BUILD.md  launch_orchestrator.sh  quick_launch.sh  requirements.txt  test_simulation.py
CERTIFICATE_MANAGEMENT/: README.md  cert_manager.sh
agents/: .env.template  .gitignore  .server_running  AGENTSMITH.md  ANDROIDMOBILE.md  APIDESIGNER.md  APIDesigner.md  APT41-DEFENSE-AGENT.md  APT41-REDTEAM-AGENT.md  ARCHITECT.md  ASSEMBLY-INTERNAL-AGENT.md  AUDITOR.md  Architect.md  BASTION.md  BGP-BLUE-TEAM.md  BGP-PURPLE-TEAM-AGENT.md  BGP-RED-TEAM.md  BRIDGE_TO_BINARY_TRANSITION.py.optimizer_backup  BRING_ONLINE.sh  Bastion.md  C-INTERNAL.md  C-MAKE-INTERNAL.md  CARBON-INTERNAL-AGENT.md  CHAOS-AGENT.md  CISCO-AGENT.md  CLAUDECODE-PROMPTINJECTOR.md  CLAUDE_BOOT_INIT.py  COGNITIVE_DEFENSE_AGENT.md  CONSTRUCTOR.md  COORDINATOR.md  CPP-GUI-INTERNAL.md  CPP-INTERNAL-AGENT.md  CRYPTO.md  CRYPTOEXPERT.md  CSO.md  Constructor.md  CryptoExpert.md  DART-INTERNAL-AGENT.md  DATABASE.md  DATASCIENCE.md  (+171 more)
agents/config/: Cargo.toml  distributed_config.json  docker-compose.override.yml  ipc_config.json  security_config.json  tandem_config.json  unified_pipeline_config.json
agents/deprecated/standalone-vtt-system/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  STANDALONE_VTT_PLAN.md
agents/deprecated/standalone-vtt-system/src/: main.cpp
agents/deprecated/standalone-vtt-system/src/core/: audio_capture.cpp  whisper_processor.cpp  whisper_processor.h
agents/deprecated/standalone-vtt-system/src/integration/: hotkey_manager.cpp
agents/deprecated/voice-recognition-rust/: Cargo.toml
agents/deprecated/voice-recognition-rust/src/accelerator/: mod.rs  openvino_sys.rs
agents/deprecated/voice-recognition-rust/src/biometrics/: mod.rs
agents/deprecated/voice-recognition-rust/src/transcription/: mod.rs
agents/src/rust-vector-router/: Cargo.toml  Dockerfile  advanced_features.yaml  agent_system.json  agents.yaml  docker-compose.yml  io_optimization.json  security_config.json  socket_config.h
agents/src/rust-vector-router/docker/: .dockerignore
agents/src/rust/npu_coordination_bridge/: Cargo.toml
agents/src/rust/npu_coordination_bridge/benches/: bridge_performance.rs
agents/src/rust/npu_coordination_bridge/src/: bridge.rs  coordination.rs  lib.rs  matlab.rs  metrics.rs  python_bindings.rs
agents/src/rust/npu_coordination_bridge/src/hardware/: intel.rs  mod.rs
agents/voice-agent-system/: Cargo.toml
agents/voice-agent-system/src/: main.rs
agents/voice-agent-system/src/core/: messaging.rs  orchestrator.rs  scheduler.rs
archive/: DOCKER_FIXES_SUMMARY.md  README.md  TESTING_GUIDE.md  claude.md.txt
archived-reports/: CLAUDE_VENV_INSTALLER_SOLUTION.md  ENHANCED_INSTALLER_COMPLETE_FEATURES.md  ENHANCED_WRAPPER_FIX_SUMMARY.md  HARDCODED_PATHS_FIXED.md  PROOFOFWORKCHECK.md  PYTHON_INSTALLER_SUMMARY.md  PYTHON_OPTIMIZATION_SUMMARY.md  bring-online  integrated_systems_validation_results.json  team_beta_deployment_report_team_beta_1758585418.json
backup-20250825-050705/: learning_orchestrator_bridge.py  production_orchestrator.py
backup-20250825-050716/: postgresql_learning_system.py
backup_before_path_fixes_20250920_232654/: CLAUDE.md  INSTALL.md  README.md
backups/: README.md  claude-installer.sh.backup.20250826-041320  context_chopping_backup_20250902_023206.sql  precision-orchestration_20250823_231705.md
build-profiles/: avx2.mk  avx512.mk  generic.mk  meteorlake.mk
config/: .bash_aliases  .bashrc  .claude.json  .credentials.json  CLAUDE.md  __init__.py  activate-agents.sh  activate-agents.sh..buggged  agent-invocation-patterns.yaml  agent-registry-complete.json  agent-registry.json  claude-agent-monitor.service  claude-agents-global-config.json  codex.yaml  database.json  dsmil-agent-coordination.json  enhanced_trigger_keywords.yaml  learning_config.json  npu_config.json  npu_environment.sh  npu_launcher.json  npu_service.json  orchestrator_integration.json  registered_agents.json  requirements.txt
crypto/: crypto_analytics_dashboard.py  crypto_performance_monitor.py
crypto-pow/: crypto_accelerated.c
database/: .learning_config.json  DATABASE_PERMISSION_SOLUTION.md  DOCKER_DEPLOYMENT_SUMMARY.md  POSTGRESQL_16_17_COMPATIBILITY_SUMMARY.md  POSTGRESQL_16_17_COMPATIBILITY_UPDATE.md  POSTGRESQL_COMPATIBILITY_SUMMARY.md  README.md  SELF_CONTAINED_SYSTEM.md  activate_learning_integration.sh  analyze_learning_performance.sh  check_learning_system.sh  collect_system_metrics.sh  deploy_enhanced_learning_system.sh  (+28 more)
hooks/crypto-pow/crypto-pow-enhanced/: Cargo.toml  README.md  build.rs
hooks/crypto-pow/crypto-pow-enhanced/examples/: basic_usage.rs  tpm_signing.rs
hooks/crypto-pow/crypto-pow-enhanced/src/: attestation.rs  crypto.rs  hardware.rs  lib.rs  pow.rs  tpm.rs
(+3385 files in other folders)
