[package]
name = "vector_router"
version = "1.0.0"
edition = "2021"
authors = ["ML-OPS Agent"]
description = "High-performance vector database for semantic message routing with hardware acceleration"
license = "MIT"
repository = "https://github.com/claude-agents/ai-enhanced-router"
documentation = "https://docs.rs/vector_router"
keywords = ["ai", "routing", "vector-database", "npu", "machine-learning"]
categories = ["database", "algorithms", "hardware-support"]

[lib]
name = "vector_router"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["simd", "parallel"]

# Hardware acceleration features
npu-acceleration = ["openvino", "tokio"]
gpu-acceleration = ["opencl3"]
simd = []

# Performance features
parallel = ["rayon"]
quantization = []
clustering = ["kmeans"]

# Development features
testing = ["proptest"]
benchmarking = ["criterion"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Numerical computing
ndarray = { version = "0.15", features = ["rayon", "serde"] }
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = { version = "1.7", optional = true }

# Concurrent data structures
arc-swap = "1.6"
dashmap = "5.4"
parking_lot = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Hardware acceleration
openvino = { version = "0.7", optional = true }
opencl3 = { version = "0.9", optional = true }

# Machine learning utilities
kmeans = { version = "0.8", optional = true }
faiss = { version = "0.12", optional = true }

# Serialization for persistence
bincode = "1.3"
rmp-serde = "1.1"

# Memory management
memmap2 = "0.9"

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = { version = "1.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }
approx = "0.5"

# Benchmarking
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "hardware_acceleration" 
required-features = ["npu-acceleration"]

[[example]]
name = "clustering_demo"
required-features = ["clustering"]

[[example]]
name = "performance_test"
required-features = ["parallel"]

[[bench]]
name = "vector_operations"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "similarity_search"
harness = false
required-features = ["benchmarking", "parallel"]

[[bench]]
name = "hardware_acceleration"
harness = false
required-features = ["benchmarking", "npu-acceleration"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

# NPU and GPU specific optimizations
[target.'cfg(target_arch = "x86_64")'.dependencies]
# Intel-specific optimizations
target-lexicon = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific hardware interfaces
libc = "0.2"
nix = "0.27"

[workspace]
members = [
    "examples",
    "benches",
    "tools"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["openvino", "opencl3"]  # Optional hardware dependencies

# Cargo configuration for cross-compilation
[target.x86_64-unknown-linux-gnu]
linker = "gcc"

[target.aarch64-unknown-linux-gnu]  
linker = "aarch64-linux-gnu-gcc"

# Custom build script configuration
[package.metadata.ai-router]
models-dir = "models"
config-dir = "config"
hardware-detection = true
performance-tuning = true