[package]
name = "voice-agent-system"
version = "0.1.0"
edition = "2021"
authors = ["Claude AI <claude@anthropic.com>"]
description = "High-performance agent-based voice recognition system optimized for Intel Core Ultra (Meteor Lake) processors"
license = "MIT"
keywords = ["voice-recognition", "agents", "gna", "npu", "intel-ultra"]
categories = ["multimedia::audio", "concurrency", "machine-learning"]

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"

# Agent framework and messaging
crossbeam = "0.8"
crossbeam-channel = "0.5"
arc-swap = "1.7"
parking_lot = "0.12"
dashmap = "5.5"

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
rustfft = "6.2"
apodize = "1.0"

# Neural network acceleration
ort = "2.0"  # ONNX Runtime for NPU
openvino = { version = "0.7", optional = true }  # Intel OpenVINO for GNA
candle-core = { version = "0.6", features = ["intel-mkl"] }
candle-nn = "0.6"
candle-transformers = "0.6"

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flatbuffers = "24.3"

# Memory management and performance
memmap2 = "0.9"
aligned-vec = "0.5"
rayon = "1.8"
num-traits = "0.2"
ndarray = { version = "0.15", features = ["rayon"] }

# Metrics and monitoring
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"

# Configuration and CLI
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# System interaction
libc = "0.2"
nix = "0.29"

# Mathematical operations
nalgebra = "0.33"
statrs = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.13"
tempfile = "3.10"

[features]
default = ["gna-support"]
gna-support = ["openvino"]
debug-traces = []
profiling = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
inherits = "release"
debug = true

[[bin]]
name = "voice-agent-system"
path = "src/main.rs"

[[bench]]
name = "agent_performance"
harness = false

[[bench]]
name = "audio_processing"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]