[package]
name = "voice-recognition-gna-npu"
version = "0.1.0"
edition = "2021"
authors = ["Personal Voice System"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Audio processing
cpal = "0.15"  # Cross-platform audio
dasp = "0.11"  # Digital audio signal processing
hound = "3.5"  # WAV file I/O
rubato = "0.14"  # High-quality resampling

# FFI for OpenVINO
libc = "0.2"
once_cell = "1.19"

# SIMD and performance
packed_simd_2 = "0.3"
rayon = "1.8"  # Parallel processing
crossbeam = "0.8"  # Lock-free data structures
parking_lot = "0.12"  # Faster mutexes

# Memory management
memmap2 = "0.9"  # Memory-mapped files
bytes = "1.5"
arrayvec = "0.7"  # Stack-allocated vectors

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Voice processing
mel-spec = "0.1"  # Mel spectrogram
rustfft = "6.1"  # FFT operations

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Metrics and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[[bench]]
name = "accelerator_bench"
harness = false