[package]
name = "crypto-pow-enhanced"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["SWORD Intelligence <security@swordint.com>"]
description = "Hardware-backed cryptographic proof-of-work attestation system"
repository = "https://github.com/SWORDIntel/crypto-pow-enhanced"
keywords = ["crypto", "pow", "tpm", "attestation", "security"]
categories = ["cryptography", "hardware-support", "authentication"]

[features]
default = ["parallel"]
tpm = ["tss-esapi", "tpm2-tss-sys"]
parallel = ["rayon"]
simd = []
simulator = ["tpm", "tpm2-sim"]
full = ["tpm", "parallel", "simd", "simulator"]

[dependencies]
# Core cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
base64 = "0.22"

# Key management
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = "2"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
time = { version = "0.3", features = ["formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
colored = "2.1"
indicatif = "0.17"

# System
dirs = "5"
tempfile = "3"
memmap2 = "0.9"

# Parallel processing
rayon = { version = "1.10", optional = true }
num_cpus = "1.16"
crossbeam-channel = "0.5"

# TPM support
tss-esapi = { version = "7", optional = true }
tpm2-tss-sys = { version = "0.5", optional = true }
tpm2-sim = { version = "0.1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Performance
ahash = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1"
tempfile = "3"
serial_test = "3"
pretty_assertions = "1"
rstest = "0.19"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.bench]
inherits = "release"

[[bin]]
name = "crypto-pow"
path = "src/bin/crypto-pow.rs"



[[example]]
name = "basic_usage"

[[example]]
name = "tpm_signing"
required-features = ["tpm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
