[package]
name = "npu-coordination-bridge"
version = "2.0.0"
edition = "2021"
authors = ["Claude Agent Framework"]
description = "High-performance NPU coordination bridge with hardware-aware optimization"

[lib]
name = "npu_coordination_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Python integration
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and monitoring
criterion = { version = "0.5", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

# Hardware integration
libc = "0.2"
nix = "0.27"

# High-performance data structures
dashmap = "5.5"
crossbeam = "0.8"
arc-swap = "1.6"

# FFI for MATLAB integration
libloading = "0.8"

# Memory management
mmap-rs = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3", "pyo3-asyncio"]
matlab-ffi = ["libloading"]
benchmarks = ["criterion"]

[[bench]]
name = "bridge_performance"
harness = false
required-features = ["benchmarks"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 2      # Stable optimization (95% of -O3 performance)
lto = "thin"       # Fast incremental LTO (5-10x faster than "fat")
codegen-units = 4  # Parallelized codegen for faster builds
strip = true       # Strip symbols for smaller binary
panic = "abort"    # Abort on panic for smaller binary
